# Eggventure

./: .gitignore  README.md
source/: CMakeLists.txt  EggStatebox.cpp  EggStatebox.h  Eggventure.cpp  Eggventure.h  assets.cpp  assets.h  egg.cpp  egg.h  eggCreator.cpp  eggCreator.h  eggHunt.cpp  eggHunt.h  game.cpp  game.h  renderer.cpp  renderer.h  shellpage.html
source/elements/: Button.cpp  Button.h  FadeScreen.cpp  FadeScreen.h  StateBox.cpp  Statebox.h  TextButton.cpp  TextButton.h  UIUtils.cpp  UIUtils.h
source/graphics/: TransitionScreen.cpp  TransitionScreen.h
